--- a/chatPDF/.env
+++ b/chatPDF/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = "sk-lwQ8hCnWtb33d3A1JLPd   T3BlbkFJpI5ukb5RbbftWuVMJAJ1"
