--- a/chatPDF/.env
+++ b/chatPDF/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = "sk-lwQ8hCnWtb33d3A1JLPdT3      BlbkFJpI5ukb5RbbftWuVMJAJ1"
