--- a/chatPDF/.env
+++ b/chatPDF/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = "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"
+OPENAI_API_KEY = "sk-UmM6VTqbEFTgzLHy8P   BfT3BlbkFJMmY3PWOOEODUzQYMMrLQ"
